# dic_reminder_crawler

./: Cargo.toml  script.sql
src/: main.rs
src/crawler/: entoen.rs  entovi.rs  mod.rs
src/db/: connection.rs
src/helper/: string_helper.rs
src/parser/: mod.rs
