[package]
name = "dic_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tl = "0.7.7"
reqwest = { version = "0.11.18", features = ["gzip"] }
tokio = { version = "1.28.2", features = ["full"] }
async-trait = "0.1.68"
anyhow = "1.0.71"
thiserror = "1.0.40"
